1616623172 | 24 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/dashboard_english.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messageoverlay.js,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/notificationtoast.js,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashbo
https://steamdb.info/patchnotes/6434803/

--- a/resources/webinterface/dashboard/localization/dashboard_english.json
+++ b/resources/webinterface/dashboard/localization/dashboard_english.json
@@ -49,7 +49,18 @@
 
   "Desktop": "Desktop",
   "Desktop_X": "Desktop %1$s",
-  "AddWindow": "Add Window",
+  "NoDesktopFound": "No desktop found.",
+  "DesktopViewsUpdating": "Desktop views updating...",
+  "AddView": "Add View",
+  "CloseView": "Close View",
+  "DockHere": "Dock Here",
+  "DockOnLeftController": "Dock on Left Controller",
+  "UndockFromLeftController": "Undock from Left Controller",
+  "DockedOnLeftController": "Docked on left controller.",
+  "DockOnRightController": "Dock on Right Controller",
+  "UndockFromRightController": "Undock from Right Controller",
+  "DockedOnRightController": "Docked on right controller.",
+  "Undock": "Undock",
   "ShowKeyboardLabel": "Keyboard",
   "ShowKeyboardTooltip": "Show Keyboard",
   "HideKeyboardTooltip": "Hide Keyboard",
