1617916436 | 15 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html
https://steamdb.info/patchnotes/6511365/

--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -438,6 +438,11 @@
 "VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Action" " "
 "VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_ActionURL" " "
 
+"VRInitError_VendorSpecific_HmdFound_UnexpectedConfiguration_1_Header" "Headset Display Configuration Error"
+"VRInitError_VendorSpecific_HmdFound_UnexpectedConfiguration_1_Description" "The headset's display has an invalid configuration. Please contact support for additional assistance."
+"VRInitError_VendorSpecific_HmdFound_UnexpectedConfiguration_1_Action" " "
+"VRInitError_VendorSpecific_HmdFound_UnexpectedConfiguration_1_ActionURL" " "
+
 "VRInitError_Steam_SteamInstallationNotFound_Header" "SteamVR Error"
 "VRInitError_Steam_SteamInstallationNotFound_Description" "Steam must be installed for SteamVR to work correctly."
 "VRInitError_Steam_SteamInstallationNotFound_Action" "Install Steam"
