--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -218,6 +218,16 @@
 	"Settings_PerApplication_ThrottlingOverride_Framerate": "Lock application framerate to (max fps):",
 	"Settings_PerApplication_ThrottlingOverride_Prediction": "Additional prediction (ms):",
 
+	"Settings_PerApplication_WorldScale_Description": "Override application's perceived scaling by adjusting head movement and eye separation.",
+	"Settings_PerApplication_WorldScale_Label": "Override World Scale",
+	"Settings_PerApplication_WorldScale_Toggle": "Toggle World Scale Multiplier slider.",
+	"Settings_PerApplication_WorldScale_Multiplier": "Custom Size",
+	"Settings_PerApplication_WorldScale_Warning": "Note: Changes may require application restart, and/or modify interactions in unexpected ways. Depending on the application, features such as throwing may be affected.",
+
+	"Settings_PerApplication_FovScale_Description": "Optionally lower the application's field of view in order to trade-off peripheral vision for clarity. Note: In many cases, the application will need to be restarted for the change to be applied properly.",
+	"Settings_PerApplication_FovScale_Label": "Field of View",
+	"Settings_PerApplication_FovScale_Multiplier": "Custom Scale",
+
 	"Settings_MimeTypes_Pancake_Header": "Select an application to launch 2D applications in",
 
 	"Settings_Camera_EnableCamera": "Enable Camera",
